# nonebot_plugin_lazy

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  opencode.json  pyproject.toml
.github/workflows/: publish.yml
nonebot_plugin_lazy/: __init__.py  auth.py  config.py  handler.py  monitor.py  notifier.py  state.py
src/plugins/lazy_monitor/: __init__.py
